scripts/session.txt
i> i> i> i> i> i> i> { accept: 'application/json,', profile: 'profiles.example.org/user' }
i> {
  accept: 'application/json,',
  profile: 'profiles.example.org/user',
  encoding: 'application/x-www-form-urlencoded'
}
i> {
  accept: 'application/json,',
  profile: 'profiles.example.org/user',
  encoding: 'application/x-www-form-urlencoded',
  test: 'http://something.com'
}
i> i> 
******************
http://rwcbook14.herokuapp.com/task/rmqzgqfq3d
{}
{}
GET

******************


{
  "collection": {
    "version": "1.0",
    "href": "//rwcbook14.herokuapp.com/task/rmqzgqfq3d",
    "title": "TPS - Tasks",
    "content": "<div class=\"ui segment\"><h3>Manage your TPS Tasks here.</h3><p>You can do the following:</p><ul><li>Add, Edit and Delete tasks</li><li>Mark tasks \"complete\", assign tasks to a user</li><li>Filter the list by Title, Assigned User, and Completed Status</li></ul></div>",
    "links": [
      {
        "href": "http://rwcbook14.herokuapp.com/home/",
        "rel": "home collection",
        "prompt": "Home"
      },
      {
        "href": "http://rwcbook14.herokuapp.com/task/",
        "rel": "self task collection",
        "prompt": "Tasks"
      },
      {
        "href": "http://rwcbook14.herokuapp.com/user/",
        "rel": "user collection",
        "prompt": "Users"
      },
      {
        "href": "http://rwcbook14.herokuapp.com/note/",
        "rel": "collection //rwcbook14.herokuapp.com/rels/note",
        "prompt": "Notes"
      }
    ],
    "items": [
      {
        "rel": "item",
        "href": "//rwcbook14.herokuapp.com/task/rmqzgqfq3d",
        "data": [
          {
            "name": "id",
            "value": "rmqzgqfq3d",
            "prompt": "ID",
            "display": "true"
          },
          {
            "name": "title",
            "value": "DTW",
            "prompt": "Title",
            "display": "true"
          },
          {
            "name": "completeFlag",
            "value": "true",
            "prompt": "Complete Flag",
            "display": "true"
          },
          {
            "name": "assignedUser",
            "value": "",
            "prompt": "Asigned User",
            "display": "true"
          },
          {
            "name": "dateCreated",
            "value": "2016-01-14T18:05:56.398Z",
            "prompt": "Created",
            "display": "false"
          },
          {
            "name": "dateUpdated",
            "value": "2016-01-16T04:52:10.250Z",
            "prompt": "Updated",
            "display": "false"
          }
        ],
        "links": [
          {
            "prompt": "Assign User",
            "rel": "assignUser edit-form",
            "href": "//rwcbook14.herokuapp.com/task/assign/rmqzgqfq3d"
          },
          {
            "prompt": "Mark Completed",
            "rel": "markCompleted edit-form",
            "href": "//rwcbook14.herokuapp.com/task/completed/rmqzgqfq3d"
          },
          {
            "prompt": "Mark Active",
            "rel": "markActive edit-form",
            "href": "//rwcbook14.herokuapp.com/task/active/rmqzgqfq3d"
          }
        ]
      }
    ],
    "queries": [],
    "template": {
      "prompt": "Add Task",
      "rel": "post-edit edit-form",
      "data": [
        {
          "name": "title",
          "value": "",
          "prompt": "Title",
          "type": "text",
          "required": "true"
        },
        {
          "name": "tags",
          "value": "",
          "prompt": "Tags",
          "type": "text"
        },
        {
          "name": "completeFlag",
          "value": "false",
          "prompt": "Complete",
          "type": "select",
          "pattern": "true|false",
          "suggest": [
            {
              "value": "false",
              "text": "No"
            },
            {
              "value": "true",
              "text": "Yes"
            }
          ]
        }
      ]
    },
    "related": {}
  }
}

i> $..links.*[?(@rel
evalmachine.<anonymous>:1
?(@rel
^

SyntaxError: Unexpected token '?'
    at new Script (vm.js:88:7)
    at createScript (vm.js:261:10)
    at Object.runInNewContext (vm.js:302:10)
    at JSONPath._eval (/media/storage/Dropbox/Private/Projects/rwmbook/i-hyper/node_modules/jsonpath-plus/dist/index-node-cjs.js:643:20)
    at /media/storage/Dropbox/Private/Projects/rwmbook/i-hyper/node_modules/jsonpath-plus/dist/index-node-cjs.js:420:16
    at /media/storage/Dropbox/Private/Projects/rwmbook/i-hyper/node_modules/jsonpath-plus/dist/index-node-cjs.js:576:7
    at Array.forEach (<anonymous>)
    at JSONPath._walk (/media/storage/Dropbox/Private/Projects/rwmbook/i-hyper/node_modules/jsonpath-plus/dist/index-node-cjs.js:575:22)
    at JSONPath._trace (/media/storage/Dropbox/Private/Projects/rwmbook/i-hyper/node_modules/jsonpath-plus/dist/index-node-cjs.js:419:10)
    at JSONPath._trace (/media/storage/Dropbox/Private/Projects/rwmbook/i-hyper/node_modules/jsonpath-plus/dist/index-node-cjs.js:365:17)
{
  "collection": {
    "version": "1.0",
    "href": "//rwcbook14.herokuapp.com/task/rmqzgqfq3d",
    "title": "TPS - Tasks",
    "content": "<div class=\"ui segment\"><h3>Manage your TPS Tasks here.</h3><p>You can do the following:</p><ul><li>Add, Edit and Delete tasks</li><li>Mark tasks \"complete\", assign tasks to a user</li><li>Filter the list by Title, Assigned User, and Completed Status</li></ul></div>",
    "links": [
      {
        "href": "http://rwcbook14.herokuapp.com/home/",
        "rel": "home collection",
        "prompt": "Home"
      },
      {
        "href": "http://rwcbook14.herokuapp.com/task/",
        "rel": "self task collection",
        "prompt": "Tasks"
      },
      {
        "href": "http://rwcbook14.herokuapp.com/user/",
        "rel": "user collection",
        "prompt": "Users"
      },
      {
        "href": "http://rwcbook14.herokuapp.com/note/",
        "rel": "collection //rwcbook14.herokuapp.com/rels/note",
        "prompt": "Notes"
      }
    ],
    "items": [
      {
        "rel": "item",
        "href": "//rwcbook14.herokuapp.com/task/rmqzgqfq3d",
        "data": [
          {
            "name": "id",
            "value": "rmqzgqfq3d",
            "prompt": "ID",
            "display": "true"
          },
          {
            "name": "title",
            "value": "DTW",
            "prompt": "Title",
            "display": "true"
          },
          {
            "name": "completeFlag",
            "value": "true",
            "prompt": "Complete Flag",
            "display": "true"
          },
          {
            "name": "assignedUser",
            "value": "",
            "prompt": "Asigned User",
            "display": "true"
          },
          {
            "name": "dateCreated",
            "value": "2016-01-14T18:05:56.398Z",
            "prompt": "Created",
            "display": "false"
          },
          {
            "name": "dateUpdated",
            "value": "2016-01-16T04:52:10.250Z",
            "prompt": "Updated",
            "display": "false"
          }
        ],
        "links": [
          {
            "prompt": "Assign User",
            "rel": "assignUser edit-form",
            "href": "//rwcbook14.herokuapp.com/task/assign/rmqzgqfq3d"
          },
          {
            "prompt": "Mark Completed",
            "rel": "markCompleted edit-form",
            "href": "//rwcbook14.herokuapp.com/task/completed/rmqzgqfq3d"
          },
          {
            "prompt": "Mark Active",
            "rel": "markActive edit-form",
            "href": "//rwcbook14.herokuapp.com/task/active/rmqzgqfq3d"
          }
        ]
      }
    ],
    "queries": [],
    "template": {
      "prompt": "Add Task",
      "rel": "post-edit edit-form",
      "data": [
        {
          "name": "title",
          "value": "",
          "prompt": "Title",
          "type": "text",
          "required": "true"
        },
        {
          "name": "tags",
          "value": "",
          "prompt": "Tags",
          "type": "text"
        },
        {
          "name": "completeFlag",
          "value": "false",
          "prompt": "Complete",
          "type": "select",
          "pattern": "true|false",
          "suggest": [
            {
              "value": "false",
              "text": "No"
            },
            {
              "value": "true",
              "text": "Yes"
            }
          ]
        }
      ]
    },
    "related": {}
  }
}
i> i> i> i> i> i> i> i> i> i> i> i> i> i> i> i> i> i> i> i> i> i> i> i> i> i> i> i> i> i> i> i> i> i> i> i> i> i> i> i> i> i> i> i> i> i> 